--- a/src/App.css
+++ b/src/App.css
@@ -8,8 +8,33 @@
   background-color: rgb(61, 61, 65);
 }
 
-.App{
+.App {
   width: 100%;
   max-width: 100%;
   box-sizing: border-box;
+}
+
+
+#root {
+  height: 100vh;
+}
+
+.small-screen {
+  display: none;
+}
+
+@media only screen and (max-width: 960px) {
+  .content {
+    display: none;
+  }
+
+  .small-screen {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: column;
+    color: white;
+    text-align: center;
+    margin: 30px 14px;
+  }
 }
