--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,60 +1,58 @@
 .navbar {
-    background-color: #36495d;
-    height: 10%;
-    display: flex;
-    justify-content: start;
-    align-items: center;
-    /* position: sticky; */
-  }
-  
+  background-color: #36495d;
+  height: 10%;
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  /* position: sticky; */
+}
+
 .nav-menu {
   width: 18%;
   height: 100vh;
   float: left;
-  overflow-y: scroll;  
+  overflow-y: scroll;
   display: flex;
   justify-content: center;
 }
 
-  .nav-text {
-    display: flex;
-    justify-content: start;
-    align-items: center;
-    padding: 8px 0px 8px 16px;
-    list-style: none;
-    height: 150px;
-    overflow-y: scroll;
-  }
+.nav-text {
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  padding: 8px 0px 0px 4px;
+  list-style: none;
+  min-height: 65px;
+}
 
 .centerNavbar {
   justify-content: center;
   align-items: center;
 }
 
-.test {
+.app-title {
+  margin-top: 15px;
   color: #f5f5f5;
-  font-size: 60px;
+  font-size: 30px;
   text-decoration: none;
   justify-content: center;
   display: flex;
   align-items: center;
 }
-  
-  .nav-text a {
-    text-decoration: none;
-    color: #f5f5f5;
-    font-size: 18px;
-    width: 95%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    padding: 0 8px;
-    border-radius: 10px;
-  }
-  
-  .nav-text a:hover {
-    background-color: #595a5c;
-  }
-  
 
+.nav-text a {
+  text-decoration: none;
+  color: #f5f5f5;
+  font-size: 18px;
+  width: 95%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  border-radius: 10px;
+  font-size: 14px;
+  padding: 10px;
+}
 
+.nav-text a:hover {
+  background-color: #595a5c;
+}
