--- a/src/pages/design.css
+++ b/src/pages/design.css
@@ -5,6 +5,10 @@
   flex-direction: column;
   align-items: center;
   vertical-align: top;
+  color: rgb(238, 235, 235);
+}
+.testthegrapth {
+  background-color: snow;
 }
 
 .aboutpage {
@@ -15,6 +19,7 @@
 
 .question-title {
   padding: 5%;
+  color: #f5f5f5;
 }
 
 .hmm {
