--- a/src/pages/design.css
+++ b/src/pages/design.css
@@ -34,3 +34,14 @@
   padding-left: 5%;
   text-align: justify;
 }
+.link {
+  overflow-y: scroll;
+  color: #f5f5f5;
+  font-size: 20px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  margin: 1%;
+  
+}
